# cdcx913

./: Cargo.toml  README.md
examples/stm32f4/: Cargo.toml  memory.x
examples/stm32f4/.cargo/: config.toml
examples/stm32f4/src/: main.rs
src/: i2c.rs  lib.rs  registers.rs
