[package]
name = "cdcx913"
description = "Driver for the TI CDCE(L)913 programmable 1-PLL clock synthesizer chip"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
arbitrary-int = {version = "2.0.0", features = ["defmt"]}
bitfield = "0.19.3"
derive_more = { version = "2.0.1", default-features = false, features = ["from", "into"] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
defmt = {version = "1.0.1"}
paste = "1.0.15"
