[package]
edition = "2024"
name = "cdcx913-stm32f4"
version = "0.1.0"
license = "MIT OR Apache-2.0"

default-run = "cdcx913-stm32f4"

[dependencies]
cdcx913 = {path = "../../"}


# Change stm32f446re to your chip name, if necessary.
embassy-stm32 = { version = "0.3.0", features = [
    "defmt",
    "stm32f446re",
    "unstable-pac",
    "memory-x",
    "time-driver-tim4",
    "exti",
    "chrono",
] }
embassy-sync = { version = "0.7.1", features = ["defmt"] }
embassy-executor = { version = "0.8.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-usb = { version = "0.5.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-hal-bus = { version = "0.2", features = ["async"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
critical-section = "1.1"
static_cell = "2"
chrono = { version = "^0.4", default-features = false }

[profile.release]
debug = 2
